# Simetrik

./: .gitignore  Contexto.md  INSTRUCCIONES_PASO5.md  README.md  client_database.json  cursor.rules  flow_diagram.md  flujo_difusion_multilingue.json  matriz_terminologica.json  pyproject.toml
Ejecución/: 00_plan_general.md  03_exploracion_notion_completa.md  04_acceso_notion_resuelto.md  05_monitoreo_release_tracker.md  06_extraccion_dod.md  07_generacion_onepager_gemini.md  08_generacion_pdf.md  09_actualizacion_notion.md  10_integracion_completa.md  README.md  configurar_api_gemini.md  entorno.md
Ejecución/n8n/: Documentacion.md
contextoXpunto/: 1_instrucciones_generales.md  2_contexto.md  3_estructura_prueba.md  4_documentos_disponibles.md  5_parte1_python_gemini.md  6_parte2_n8n_flujos.md  README.md
contextoXpunto/n8n/: Documentacion.md
email_templates/: template_EN.html  template_ES.html  template_PT.html
prompts/: gemini_prompts.md  gemini_prompts.txt
src/: actualizarnotion.py  extraer_dod.py  extraer_onepager_guide.py  generar_onepager_gemini.py  generar_pdf.py  main.py  subir_github.py  tracker.py
src/logs/: .gitkeep
src/output/: dod_content.md  onepager_generado.md  onepager_guide.md
tests/: .gitkeep
